--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "lint-staged": "^8.1.5",
+    "prerender-spa-plugin": "^3.4.0",
     "vue-template-compiler": "^2.6.10"
   },
   "postcss": {
